# bsky-sentiment-pipeline

./: bsky-sentiment.py  pyproject.toml
bluesky_producer/: bsky.py  pyproject.toml
