[tool.poetry]
name = "bsky-sentiment-pipeline"
version = "0.1.0"
description = "Real-time streaming pipeline on Bluesky Firehose\\"
authors = ["dedyoc <huyhoaius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
